# png-mapper

./: .clang-format  .gitignore  CMakeLists.txt  png-mapper.cpp
png-lite/: pnglite.c  pnglite.h
src/: Io.cpp  Io.h  Mapper.cpp  Mapper.h  Png.cpp  Png.h  PngMapper.cpp  Vector2.cpp  Vector2.h  main.cpp
zlib/: crc32.h  deflate.h  inffixed.h  inflate.h  inftrees.h  zconf.h  zlib.h  zutil.h
